--- a/src/css/card.css
+++ b/src/css/card.css
@@ -3,3 +3,77 @@
   font-size: 18px;
 }
 
+.card{
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  width: 210px;
+  padding: 0.6rem;
+  border: 0.5px solid rgb(136, 136, 136);
+  border-radius: 10px;
+  margin: 0.5rem;
+  border: 3px solid black;
+}
+
+.card > button{
+  margin-top: 0.5rem;
+  width: 80%;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.dark-card{
+  background-color: #294936;
+  color: white;
+}
+
+.dark-card > button{
+  background-color: #3D767B;
+  color: white;
+}
+
+.dark-card > button:hover{
+  background-color: #c7cedb;
+  color: black;
+}
+
+.dark-card > a {
+  color: white;
+}
+
+.dark-card > a:hover{
+  color: #3D767B;
+}
+
+.dark-card:hover{
+  border: 3px solid #c7cedb;
+}
+
+.light-card{
+  background-color: #AEF6C7;
+  color: black;
+}
+
+.light-card > button{
+  background-color: #5B8266;
+  color: black;
+}
+
+.light-card > button:hover{
+  background-color: #424C46;
+  color: white;
+}
+
+.light-card > a {
+  color: black;
+}
+
+.light-card > a:hover{
+  color: #3D767B;
+}
+
+.light-card:hover{
+  border: 3px solid #424C46;
+}
