--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -3,11 +3,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 75vh;
+    height: 72.7vh;
 }
 
 .detail-page > h1{
-    margin-top: 2rem;
     font-size: 2.5rem;
 }
 
@@ -21,4 +20,14 @@
     font-size: 1.2rem;
     font-weight: 400;
     margin-bottom: 0.5rem;
+}
+
+.light-detail{
+    background-color: #C7CEDB;
+    color: black;
+}
+
+.dark-detail{
+    background-color: #424C46;
+    color: white;
 }
