--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    height: 72.7vh;
+    min-height: 723px;
 }
 
 .detail-page > h1{
