--- a/src/css/favs.css
+++ b/src/css/favs.css
@@ -3,5 +3,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 70vh;
+  min-height: 723px;
+}
+
+.dark-favs{
+  background-color: #424C46;
+  color: white;
+}
+
+.light-favs{
+  background-color: #C7CEDB;
+  color: black;
+}
+
+.no-favs{
+  font-size: 2rem;
+  color: #D84727;
 }
