--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -6,6 +6,12 @@
     min-height: 723px;
 }
 
+.detail-page > img{
+    width: 200px;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
+
 .detail-page > h1{
     font-size: 2.5rem;
 }
