--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -29,7 +29,7 @@
 }
 
 .light-footer{
-  background-color: #A3B0AE;
+  background-color: #3587A4;
   color: #2e3532;
   border-top: 3px solid #2e3532;
 }
