--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -44,7 +44,7 @@ nav > button{
 }
 
 .light-navbar{
-  background-color: #A3B0AE;
+  background-color: #3587A4;
   border-bottom: 3px solid #2e3532;
 }
 
